--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap-theme.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
