sse event source

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <div class="container">
     <div class="header" ng-controller="HeaderCtrl">
         <ul class="nav nav-pills pull-right">
-
             <li><a href="#/home" translate="global.home">Home</a></li>
             <li><a href="#/users" translate="global.all">All users</a></li>
+            <li><a href="#/comments">Comments</a></li>
             <li><a href="javascript:;" ng-click="changeLanguage('fr')">FR</a></li>
             <li><a href="javascript:;" ng-click="changeLanguage('en')">EN</a></li>
         </ul>
@@ -52,5 +52,7 @@
 <script type="text/javascript" src="js/directives.js"></script>
 <script type="text/javascript" src="partials/users/data.js"></script>
 <script type="text/javascript" src="partials/users/users.js"></script>
+<script type="text/javascript" src="partials/comments/controllers.js"></script>
+<script type="text/javascript" src="partials/comments/comments.js"></script>
 </body>
 </html>
