--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="bower/ng-table/dist/ng-table.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -44,6 +45,7 @@
 <script src="bower/angular-cookies/angular-cookies.min.js"></script>
 <script src="bower/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
 <script src="bower/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
+<script src="bower/ng-table/dist/ng-table.min.js"></script>
 
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/controllers.js"></script>
