websocket native chat

--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
 <script type="text/javascript" src="partials/comments/comments.js"></script>
 <script type="text/javascript" src="partials/messages/controllers.js"></script>
 <script type="text/javascript" src="partials/messages/messages.js"></script>
+<script type="text/javascript" src="partials/messages/mes.js"></script>
 </body>
 </html>
