--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="js/filters.js"></script>
 <script type="text/javascript" src="js/directives.js"></script>
+<script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="partials/users/data.js"></script>
 <script type="text/javascript" src="partials/users/users.js"></script>
 <script type="text/javascript" src="partials/comments/controllers.js"></script>
