communicate with python server by sockets

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="#/users" translate="global.all">All users</a></li>
             <li><a href="#/comments">Comments</a></li>
             <li><a href="#/chat">Chat</a></li>
+            <li><a href="#/python">Python</a></li>
             <li><a href="javascript:;" ng-click="changeLanguage('fr')">FR</a></li>
             <li><a href="javascript:;" ng-click="changeLanguage('en')">EN</a></li>
         </ul>
@@ -56,7 +57,6 @@
 <script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="js/filters.js"></script>
 <script type="text/javascript" src="js/directives.js"></script>
-<script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="partials/users/data.js"></script>
 <script type="text/javascript" src="partials/users/users.js"></script>
 <script type="text/javascript" src="partials/comments/controllers.js"></script>
@@ -64,5 +64,7 @@
 <script type="text/javascript" src="partials/messages/controllers.js"></script>
 <script type="text/javascript" src="partials/messages/messages.js"></script>
 <script type="text/javascript" src="partials/messages/mes.js"></script>
+<script type="text/javascript" src="partials/python/controllers.js"></script>
+<script type="text/javascript" src="partials/python/py.js"></script>
 </body>
 </html>
